src/components/PDFReader/PDFReader.module.scss
@use '../../scss/variables' as *;

:global(.rpv-core__menu-divider) {
  border-bottom: none;
  margin: 0;
}

:global(.rpv-toolbar__center .rpv-core__display--hidden) {
  @media (max-width: 639px) {
    display: flex;
  }
}
:global(.rpv-core__menu-item-label--ltr) {
  @media (max-width: 400px) {
    padding: 0;
  }
  @media (max-width: 375px) {
    font-size: 13px;
  }
}
.reader {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  width: 100%;
  max-width: calc(100dvh * 0.8);
  height: 100%;
  max-height: calc(100dvh - $header-fixed);
  margin: 10px;
  background-color: transparent;
  @media (max-width: 425px) {
    margin: 10px;
  }
}

